objects/nFORCE__Feature_Translation__mdt.object
<CustomObject>
    <description>This hidden object stores feature records. The feature records designate which features are translatable using the nCino record translations tool.</description>
    <fields>
        <fullName>nFORCE__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Feature__c</fullName>
        <description>Lookup to Feature</description>
        <label>Feature</label>
        <referenceTo>nFORCE__Feature__mdt</referenceTo>
        <relationshipLabel>Feature Translations</relationshipLabel>
        <relationshipName>Feature_Translations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_API_Name__c</fullName>
        <description>Field API Name</description>
        <label>Field API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__SObject_API_Name__c</fullName>
        <description>SObject API Name</description>
        <label>SObject API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Feature Translation</label>
    <listViews>
        <fullName>All_CMT</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>nFORCE__Feature__c</columns>
        <columns>nFORCE__SObject_API_Name__c</columns>
        <columns>nFORCE__Field_API_Name__c</columns>
        <columns>nFORCE__Active__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All CMT</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Feature Translations</pluralLabel>
</CustomObject>